# atarashi-classifer

./: LSH.py  README.md  Untitled.ipynb  main.py  pyproject.toml
.ipynb_checkpoints/: LSH-checkpoint.py  license_data_summary-checkpoint.csv  lsh_index_search-checkpoint.py  lsh_index_search_small-checkpoint.py  pyproject-checkpoint.toml
results/: combined_license_file_counts.csv  lsh_metrics.json
results/.ipynb_checkpoints/: lsh_eval_results-checkpoint.csv
scripts/: Test_SimHash.ipynb  license_detection_results.csv
scripts/.ipynb_checkpoints/: Dataset-checkpoint.ipynb  Non_license_Crawler-checkpoint.ipynb  Test_SimHash-checkpoint.ipynb
scripts/cache/: filenames.pkl
