[project]
name = "atarashi-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=1.5.0",
    "scikit-learn>=1.0.0",
    "datasketch>=1.5.8",
    "joblib>=1.2.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "tqdm>=4.67.1",
    "sentence-transformers>=4.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.setuptools]
packages = ["."]
